<resources>
    <string name="app_name">Zeeguu Library</string>

    <!-- General -->
    <string name="name">Name</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="create_account">Create Account</string>
    <string name="signin">Sign in</string>
    <string name="preference_logout">Log out</string>
    <string name="login_successful">Login successful</string>
    <string name="no_login">Not logged in</string>
    <string name="error_language">Please set your language</string>
    <string name="error_email">Please enter a valid email address</string>

    <!-- myWords Fragment -->
    <string name="mywords_menu">My Words</string>
    <string name="mywords_empty">You do not have any words in your library yet. To create your own words library please bookmark the word combinations after you translated them</string>
    <string name="mywords_delete_bookmark">Delete</string>
    <string name="mywords_expand">Expand list</string>
    <string name="mywords_collapse">Collapse list</string>
    <string name="mywords_refresh">Refresh list</string>

    <string name="preference_title">Settings</string>

    <!-- Browser Fragment -->
    <string name="action_back">Back</string>
    <string name="action_forward">Forward</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_unhighlight">Remove Highlight</string>
    <string name="action_settings">Settings</string>
    <string name="action_home">Homepage</string>
    <string name="search_title">Search</string>

    <!-- Login and create account dialog -->
    <string name="login_zeeguu_title">Zeeguu Login</string>
    <string name="login_zeeguu_error_password">Please enter your password</string>
    <string name="login_zeeguu_error_wrong">Wrong email or password</string>
    <string name="login_zeeguu_sign_in_message">You did not sign in yet, please do so to be able to connect to the server.</string>
    <string name="login_zeeguu_no_account">No account yet?\n Click here!</string>

    <string name="create_account_title">New Account</string>
    <string name="create_account_error_password">Please choose a password</string>
    <string name="create_account_error_username">Please choose a name</string>
    <string name="create_account_error_existing">Account already existing. Press cancel to log in or choose another email address.</string>
    <string name="create_account_sign_in_message">Have an account?\n Sign in here!</string>

    <!-- Logout dialog -->
    <string name="logout_zeeguu_title">Zeeguu Logout</string>
    <string name="logout_zeeguu_confirmation">Do you really want to log out?</string>

    <!-- Success and failure messages -->
    <string name="successful_mywords_updated">Your Words have been updated </string>
    <string name="successful_bookmark_deleted">Bookmark deleted successfully! </string>
    <string name="success_bookmark_added">Word saved to your wordlist</string>
    <string name="error_input_not_valid">Input not valid</string>
    <string name="error_bookmark_delete">Bookmark could not be deleted. Please try later again.</string>
    <string name="error_login_first">Please log in to use this feature</string>
    <string name="error_language_combination">This language combination is not possible</string>
    <string name="error_language_server">Something went wrong. Please try again.</string>
    <string name="error_refreshing_already_running">There is already one refreshing operation running </string>
    <string name="error_no_internet_connection">No internet connection available</string>

</resources>
