<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/login_zeeguu_header">
        <ImageView
            android:id="@+id/login_header_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:src="@mipmap/zeeguu_logo" />
        <TextView
            android:id="@+id/login_header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_zeeguu_title"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/login_header_logo"
            android:layout_toEndOf="@+id/login_header_logo" />
        <ImageButton
            android:id="@+id/login_header_new_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_new"
            android:background="@null"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:layout_marginEnd="12dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/login_zeeguu_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="0dp"
        android:visibility="gone"/>
    <EditText
        android:id="@+id/login_zeeguu_email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/email" />
    <EditText
        android:id="@+id/login_zeeguu_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/password"/>
</LinearLayout>
